# 360ksiegowoscAPI

./: README.md  config.json  ksiegowosc360.py  pyproject.toml
examples/: basic_usage.py  django_integration.py
merit_activa/: __init__.py  client.py  exceptions.py
tests/: test_client.py
